[package]
name = "transit-isochrones"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
contour = { version = "0.11.0", features = ["geojson"] }
geojson = "0.24.1"
gtfs-structures = "0.37.0"
kdtree = "0.7.0"
num_cpus = "1.16.0"
osmpbf = "0.3.2"
rayon = "1.8.0"
rocket = "0.5.0"
serde = "1.0.192"

[profile.release]
debug = true
