[package]
name = "transit-isochrones"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
contour = { version = "0.13.1", features = ["geojson"] }
geo = { version = "0.28.0", features = ["use-serde"] }
geojson = { version = "0.24.1", features = ["geo-types"] }
gtfs-structures = "0.37.0"
kdtree = { version = "0.7.0", features = ["serde", "serde_derive", "serialize"] }
num_cpus = "1.16.0"
osmpbf = "0.3.2"
rocket = "0.5.0"

[profile.release]
debug = true
